[package]
name = "rust-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
warp = "0.3.3"
bollard = "*"
futures = "0.3.27" 
futures-util = "0.3.27"
json = "0.12.4"
cached = "0.42.0"
lru = "0.10.0"
